--- a/serverless.yml
+++ b/serverless.yml
@@ -58,8 +58,18 @@ provider:
 #    - include-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  app/api:
+    handler: handler.handler
+    events:
+      -http:
+          path: /
+          method: get
+          cors: true
+      -http: 
+          path: /{proxy*}
+          method: any
+          cors: true
+
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
