--- a/serverless.yml
+++ b/serverless.yml
@@ -11,19 +11,18 @@
 #
 # Happy Coding!
 
-service: myapi
+service: api
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
-frameworkVersion: '2'
+# frameworkVersion: "=X.X.X"
 
 provider:
   name: aws
   runtime: nodejs12.x
-  lambdaHashingVersion: 20201221
 
 # you can overwrite defaults here
 #  stage: dev
@@ -51,31 +50,31 @@ provider:
 
 # you can add packaging information here
 #package:
-#  patterns:
-#    - '!exclude-me.js'
-#    - '!exclude-me-dir/**'
+#  include:
 #    - include-me.js
 #    - include-me-dir/**
+#  exclude:
+#    - exclude-me.js
+#    - exclude-me-dir/**
 
 functions:
-  app/api:
+  app-api:
     handler: handler.handler
     events:
-      -http:
+      - http:
           path: /
           method: get
           cors: true
-      -http: 
-          path: /{proxy*}
+      - http:
+          path: /{proxy+}
           method: any
           cors: true
-
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
 #    events:
-#      - httpApi:
-#          path: /users/create
+#      - http:
+#          path: users/create
 #          method: get
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
